--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,7 @@
-HELP.md
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**
-!**/src/test/**
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-
-### VS Code ###
-.vscode/
-/data/
+/ziptrend-parent.iml
+/ziptrend-test/data/
+/ziptrend-test/target/
+/ziptrend-test/ziptrend-test.iml
+/ziptrend/target/
+/ziptrend/ziptrend.iml
+/.idea/
